# pgpu

./: Cargo.toml  Cargo.toml.edb  README.md  pgpu.control
.cargo/: config.toml
.github/workflows/: blackduck-scan.yml  sonarqube-scan.yml  trufflehog-scan.yml
gpu-lib/: Cargo.toml
gpu-lib/src/: clustering_gpu_impl.rs
pgpu-gpu-lib/: Cargo.toml
pgpu-gpu-lib/src/: abi_version.rs  lib.rs
scripts/: pg_vector_scatterplot.py  setup_build.sh
src/: lib.rs  vectorchord_indexing.rs
tests/pg_regress/expected/: setup.out
tests/pg_regress/sql/: gpu_accelerated_index_kmeans_accuracy.sql  gpu_accelerated_index_kmeans_accuracy_ip.sql
vectorchord-indexing/: Cargo.toml
vectorchord-indexing/src/: centroids_table.rs  clustering_gpu_impl.rs  guc.rs  guc_fallback.rs  index.rs  index_fallback.rs  lib.rs  util.rs  vector_index_read.rs  vector_type.rs  vectorchord_index.rs  wrapper_gpu_lib.rs
