[package]
name = "pgpu"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pgpu"
path = "./src/bin/pgrx_embed.rs"

[workspace]
members = ["vectorchord-indexing"]

# workspace.dependencies can be referenced by the workspace members. Then we can declare the version only once, here.
[workspace.dependencies]
cuvs = { git = "https://github.com/rapidsai/cuvs", tag = "v25.12.00", version = "25.12.0", default-features = false }
ndarray = "0.15.6"
pgrx = { git = "https://github.com/EnterpriseDB/pgrx", branch = "develop-v0.16.1-edb", default-features = false }

[features]
EPAS = ["pgrx/EPAS"]
PGE = ["pgrx/PGE"]
default = ["pg17"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = { workspace = true }
vectorchord-indexing = { path = "vectorchord-indexing" }


[dev-dependencies]
pgrx-tests = { git = "https://github.com/EnterpriseDB/pgrx", branch = "develop-v0.16.1-edb", default-features = false }

[profile.dev]
panic = "unwind"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "unwind"
